break lines to prevent overflow

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -68,6 +68,7 @@ main {
 
   .failure-msg {
     padding:16px;
+    word-wrap: break-word;
   }
 
   .failure-location {
